--- a/style.css
+++ b/style.css
@@ -1,5 +1,32 @@
 h1{
-    background-color: gray;
-    justify-content:center; 
+    display: flex;
+    align-items: center;
+    justify-content: center;   
+}
+
+div{
+    width: 100%;
+    height: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background-color:#2fcc76;
+    padding-bottom: 20px;
+    font-family: 'Dancing Script', cursive;
+    color: white;
+}
+input{
+    margin-bottom: 25px;
+    width: 200px;
+    height: 20px;
+    border: none;
+    border-radius: 30px;
     
+}
+div button{
+    cursor: pointer;
+    width: 150px;
+    height: 25px;
+    font-style: bolder;
 }
